# ticketing-python

./: README.md  skaffold.yaml
auth/: Dockerfile  entrypoint.sh  pyproject.toml
auth/auth/: __init__.py  auth.py
auth/auth/current_user/: route.py
auth/auth/signin/: route.py
auth/auth/signout/: route.py
auth/auth/signup/: route.py
infra/k8s/: auth-depl.yaml  ingress-srv.yaml
