[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Juan Gremes <juan.gremes@affirm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
requests = "^2.30.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
